# fitness_guide

./: .gitignore  README.md  add_user_columns.py  app.py  daily_meal_plans.xlsx  db.py  foods.py  foods_log.xlsx  load_from_excel.py  meals.py  meals_log.xlsx  migrate_database.py  models.py  requirements.txt  reset_database.py  test_db.py
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  repositories.py
backend/app/agent/: coach.py  model.py  tools.py
backend/app/api/: coach.py  foods.py  logs.py  nutrition.py  plans.py  profile.py  users.py
backend/app/core/: body.py  energy.py  goals.py  macros.py  planner.py  profile.py  targets.py
backend/app/integrations/: nutrition.py  openfoodfacts.py  usda.py
backend/app/migration/: parsers.py  runner.py  schema_upgrade.py
backend/app/seed/: enrich.py  legacy_micros.json  seeder.py  staples.json
backend/scripts/: build_enrichment.py  build_seed.py
backend/tests/: test_config.py  test_db.py  test_enrich.py  test_food_search.py  test_models.py  test_plan_models.py  test_plan_repositories.py  test_repositories.py  test_seeder.py
backend/tests/agent/: test_coach_build.py  test_coach_memory.py  test_meal_tools.py  test_model.py  test_plan_day.py  test_tools.py
backend/tests/api/: test_api.py  test_coach_api.py  test_foods_api.py  test_logs_api.py  test_nutrition_api.py  test_plans_api.py  test_users_api.py
backend/tests/core/: test_body.py  test_energy.py  test_fit_servings.py  test_goals.py  test_macros.py  test_planner.py  test_profile.py  test_score_plan.py  test_targets.py
backend/tests/integrations/: test_normalize.py  test_usda.py  (+1 more)
(+13 files in other folders)
